添加了闰年闰月功能，添加了未足够完善的12小时制

--- a/Objects/calendar.build_log.htm
+++ b/Objects/calendar.build_log.htm
@@ -23,14 +23,13 @@ Project File Date:  03/30/2019
 
 <h2>Output:</h2>
 Build target 'Core'
+compiling lcd1602.c...
 compiling main.c...
 linking...
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_LCD1602_PRINT?LCD1602
-Program Size: data=36.0 xdata=9 code=3288
+Program Size: data=34.0 xdata=10 code=3446
 creating hex file from ".\Objects\calendar"...
-".\Objects\calendar" - 0 Error(s), 1 Warning(s).
-Build Time Elapsed:  00:00:01
+".\Objects\calendar" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
