--- a/Objects/calendar.build_log.htm
+++ b/Objects/calendar.build_log.htm
@@ -19,25 +19,18 @@ CPU DLL:         S8051.DLL V3.122.0.0
 Dialog DLL:      DP51.DLL V2.66.0.0 
 <h2>Project:</h2>
 C:\Users\ASUS\Desktop\Proj_Calendar\calendar.uvproj
-Project File Date:  03/30/2019
+Project File Date:  04/01/2019
 
 <h2>Output:</h2>
 Build target 'Core'
+assembling STARTUP.A51...
+compiling lcd1602.c...
+compiling ds1302.c...
 compiling main.c...
-linking...
-<<<<<<< HEAD
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_LCD1602_PRINT?LCD1602
-Program Size: data=44.0 xdata=0 code=2786
-creating hex file from ".\Objects\calendar"...
-".\Objects\calendar" - 0 Error(s), 1 Warning(s).
-Build Time Elapsed:  00:00:00
-=======
-Program Size: data=34.0 xdata=11 code=3464
-creating hex file from ".\Objects\calendar"...
-".\Objects\calendar" - 0 Error(s), 0 Warning(s).
+main.c(4): error C141: syntax error near '<<', expected 'hdata'
+main.c(5): error C129: missing ';' before '=='
+Target not created.
 Build Time Elapsed:  00:00:01
->>>>>>> dev
 </pre>
 </body>
 </html>
