--- a/Objects/calendar.build_log.htm
+++ b/Objects/calendar.build_log.htm
@@ -23,14 +23,12 @@ Project File Date:  04/01/2019
 
 <h2>Output:</h2>
 Build target 'Core'
-assembling STARTUP.A51...
-compiling lcd1602.c...
-compiling ds1302.c...
 compiling main.c...
-main.c(4): error C141: syntax error near '<<', expected 'hdata'
-main.c(5): error C129: missing ';' before '=='
-Target not created.
-Build Time Elapsed:  00:00:01
+linking...
+Program Size: data=34.0 xdata=11 code=3464
+creating hex file from ".\Objects\calendar"...
+".\Objects\calendar" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
